--- a/package/crds/remote.artifactory.jfrog.m.crossplane.io_dockerrepositories.yaml
+++ b/package/crds/remote.artifactory.jfrog.m.crossplane.io_dockerrepositories.yaml
@@ -235,6 +235,10 @@ spec:
                     description: If set, Artifactory does not try to fetch remote
                       artifacts. Only locally-cached artifacts are retrieved.
                     type: boolean
+                  passThrough:
+                    description: Enable Pass-through for Curation Audit. When enabled,
+                      allows artifacts to pass through the Curation audit process.
+                    type: boolean
                   passwordSecretRef:
                     description: |-
                       A LocalSecretKeySelector is a reference to a secret key
@@ -535,6 +539,10 @@ spec:
                   offline:
                     description: If set, Artifactory does not try to fetch remote
                       artifacts. Only locally-cached artifacts are retrieved.
+                    type: boolean
+                  passThrough:
+                    description: Enable Pass-through for Curation Audit. When enabled,
+                      allows artifacts to pass through the Curation audit process.
                     type: boolean
                   passwordSecretRef:
                     description: |-
@@ -893,6 +901,10 @@ spec:
                   offline:
                     description: If set, Artifactory does not try to fetch remote
                       artifacts. Only locally-cached artifacts are retrieved.
+                    type: boolean
+                  passThrough:
+                    description: Enable Pass-through for Curation Audit. When enabled,
+                      allows artifacts to pass through the Curation audit process.
                     type: boolean
                   priorityResolution:
                     description: Setting repositories with priority will cause metadata
