--- a/package/crds/remote.artifactory.jfrog.crossplane.io_pypirepositories.yaml
+++ b/package/crds/remote.artifactory.jfrog.crossplane.io_pypirepositories.yaml
@@ -227,6 +227,10 @@ spec:
                     description: If set, Artifactory does not try to fetch remote
                       artifacts. Only locally-cached artifacts are retrieved.
                     type: boolean
+                  passThrough:
+                    description: Enable Pass-through for Curation Audit. When enabled,
+                      allows artifacts to pass through the Curation audit process.
+                    type: boolean
                   passwordSecretRef:
                     description: A SecretKeySelector is a reference to a secret key
                       in an arbitrary namespace.
@@ -513,6 +517,10 @@ spec:
                   offline:
                     description: If set, Artifactory does not try to fetch remote
                       artifacts. Only locally-cached artifacts are retrieved.
+                    type: boolean
+                  passThrough:
+                    description: Enable Pass-through for Curation Audit. When enabled,
+                      allows artifacts to pass through the Curation audit process.
                     type: boolean
                   passwordSecretRef:
                     description: A SecretKeySelector is a reference to a secret key
@@ -885,6 +893,10 @@ spec:
                   offline:
                     description: If set, Artifactory does not try to fetch remote
                       artifacts. Only locally-cached artifacts are retrieved.
+                    type: boolean
+                  passThrough:
+                    description: Enable Pass-through for Curation Audit. When enabled,
+                      allows artifacts to pass through the Curation audit process.
                     type: boolean
                   priorityResolution:
                     description: Setting repositories with priority will cause metadata
