--- a/package/crds/remote.artifactory.jfrog.m.crossplane.io_gorepositories.yaml
+++ b/package/crds/remote.artifactory.jfrog.m.crossplane.io_gorepositories.yaml
@@ -212,6 +212,10 @@ spec:
                     description: If set, Artifactory does not try to fetch remote
                       artifacts. Only locally-cached artifacts are retrieved.
                     type: boolean
+                  passThrough:
+                    description: Enable Pass-through for Curation Audit. When enabled,
+                      allows artifacts to pass through the Curation audit process.
+                    type: boolean
                   passwordSecretRef:
                     description: |-
                       A LocalSecretKeySelector is a reference to a secret key
@@ -498,6 +502,10 @@ spec:
                   offline:
                     description: If set, Artifactory does not try to fetch remote
                       artifacts. Only locally-cached artifacts are retrieved.
+                    type: boolean
+                  passThrough:
+                    description: Enable Pass-through for Curation Audit. When enabled,
+                      allows artifacts to pass through the Curation audit process.
                     type: boolean
                   passwordSecretRef:
                     description: |-
@@ -842,6 +850,10 @@ spec:
                   offline:
                     description: If set, Artifactory does not try to fetch remote
                       artifacts. Only locally-cached artifacts are retrieved.
+                    type: boolean
+                  passThrough:
+                    description: Enable Pass-through for Curation Audit. When enabled,
+                      allows artifacts to pass through the Curation audit process.
                     type: boolean
                   priorityResolution:
                     description: Setting repositories with priority will cause metadata
