--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -13,13 +13,17 @@ on:
 jobs:
   create-tag:
     runs-on: ubuntu-latest
-
+    permissions:
+      # contents and actions permissions are required for the negz/create-tag
+      # action to create a tag and push it to the repository
+      contents: write
+      actions: write
     steps:
       - name: Checkout
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
       - name: Create Tag
-        uses: negz/create-tag@39bae1e0932567a58c20dea5a1a0d18358503320 # v1.0.3
+        uses: negz/create-tag@39bae1e0932567a58c20dea5a1a0d18358503320 # v1
         with:
           version: ${{ github.event.inputs.version }}
           message: ${{ github.event.inputs.message }}
